Change log for hexer, the multi-view binary editor

0.1.9	not yet ;)
	- fix a lot of C compiler warnings
	- provide a better vasprintf() simulation to fix a display bug
	- use sigemptyset() instead of a direct assignment to sigset_t
	  (reported by Daniel Schepler <dschepler@gmail.com>)
	- remove some unused functions

0.1.8	2014/09/11
	- fix a crash when inserting or replacing a half-byte
	  Thanks, Thibaut Girka <thib@sitedethib.com>
	- use CPPFLAGS and LDFLAGS as appropriate during the build
	- create the destination directories during the installation
	- bump the year of my copyright notice on files changed in 2014

0.1.7	2011/07/13
	- fix searching for characters with a code point above 127
	  Reported by: Michael Gold <mgold@ncf.ca> in Debian bug #633508
	- bump the year of my copyright notice on files changed in 2011

0.1.6	2010/12/29
	- fix some errors and warnings detected by cppcheck:
	  - bin2c.c, buffer.c, commands.c, hexer.c - file descriptor leaks
	  - calc.c - a buffer overflow with an overlong command line
	  - main.c - suppress a false positive about a global pointer
	  - regex.c - note that I've been aware of the negative array index
	    problem ever since I first looked at the hexer source code and
	    tried to build it with a raised compiler warning level :)
	- add a TODO list inspired by the cppcheck results
	- bump the year of my copyright notice on files changed in 2010
	- fix a "calcualtor" typo in comments in calc.c and exh.c

0.1.5	2009/09/04
	- taken over by Peter Pentchev <roam@ringlet.net>
	- remove the "bdir" and "ef" settings from the Vim modelines to
	  make them actually acceptable to today's Vim
	- remove most of the settings from the Vim modelines
	- add a config.posix file to reflect a modern POSIX-like system
	- bring config.linux up to date
	- add a HAVE_STRERROR definition to the config files and roll out
	  our own strerror() function if needed
	- clean up the header files: