@@ -6,6 +6,7 @@ Change log for hexer, the multi-view binary editor
 	- use sigemptyset() instead of a direct assignment to sigset_t
 	  (reported by Daniel Schepler <dschepler@gmail.com>)
 	- remove some unused functions
+	- simplify exh_save_buffer(): it's only used on the whole file
 
 0.1.8	2014/09/11
 	- fix a crash when inserting or replacing a half-byte
